--- a/art.html
+++ b/art.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="https://thumbs.gfycat.com/CheeryGrimLark-size_restricted.gif" alt="Artwork 2">
+        <img src="https://media1.tenor.com/m/4_K-4-tTPoEAAAAC/koyomi-araragi-kizumonogatari.gif" alt="Artwork 2">
         <div class="artwork-description">
           <h3>Artwork 2</h3>
           <p>Une œuvre d'art animée captivante qui met en scène une scène climatique de Kizumonogatari. Les détails complexes et les mouvements fluides donnent vie à ce moment.</p>
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="artwork">
-        <img src="https://thumbs.gfycat.com/DaringHarshBigmouthbass-size_restricted.gif" alt="Artwork 12">
+        <img src="https://media1.tenor.com/m/TbZKQEMR24cAAAAC/disturbed-koyomi.gif" alt="Artwork 12">
         <div class="artwork-description">
           <h3>Artwork 12</h3>
           <p>Les motifs abstraits présents dans les compositions suggèrent une signification symbolique plus profonde, ajoutant une dimension de mystère avec une touche d'horreur et une interprétation plus profonde à l'œuvre.</p>
